# Machine_Learning_Project

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
data/: raw.dvc
docker/: Dockerfile
e2eml/: version_data.py
e2eml/config_schemas/: config_schema.py
e2eml/configs/: config.yaml
e2eml/configs/hydra/job_logging/: custom.yaml
e2eml/utils/: config_utils.py  data_utils.py  utils.py
project_environment/: entrypoint.py  version_data.py
project_environment/utils/: config_utils.py  data_utils.py
